Revision history for {{$dist->name}}

{{$NEXT}}

1.34      2020-10-23 09:04:46 -0600
  - Fixed bug in in record meta object which expressed itself on at least
    some platforms (gh#287, gh#288)

1.33      2020-09-28 10:47:26 -0600
  - FFI::Platypus::Declare is no longer part of this distribution.  It is
    no available from FFI-Platypus-Declare instead.  It has already
    been discouraged for quite some time. (gh#285)
  - Fix bug where bundled .so name could incorrectly get double colons (::)
    in the name in development mode only.  This is probably only a problem
    on Windows. (gh#284)

1.32      2020-09-21 04:25:13 -0600
  - Fix unsupported Perl tests.
    Fixes code that refuse to install on 5.10.0t (threads) (gh#275, gh#280)

1.31      2020-07-01 05:28:10 -0600
  - Refuse to install on very old versions of Perl 5.8.1, 5.8.2, 5.8.3 and
    5.10.0t (threads) (Gh#275)
  - Move to new GH org PerlFFI (old org was Perl5-FFI, and will remain to
    keep URL redirection).  The new URL is
    https://github.com/PerlFFI/FFI-Platypus

1.30      2020-06-16 06:51:53 -0600
  - Dropping support for Perl 5.8.1, 5.8.2 and 5.8.3, and the threaded version
    of 5.10.0.  For now Platypus will install on these versions of Perl, but a
    warning will be issued, along with a 45s sleep at configure time and a 180s
    sleep at test time.  Please upgrade to 5.8.4 (or preferrably 5.32).
    Starting July 1st, Platypus will refuse to install on these elderly Perls.
    (gh#271, gh#272)

1.29      2020-06-06 08:40:10 -0600
  - For window (from FFI::Platypus::Buffer), if $size is omitted then
    it will assumed to be a C string and computed using strlen (gh#270)

1.28      2020-05-20 01:43:09 -0600
  - Production release identical to 1.27_01

1.27_01   2020-05-17 18:01:37 -0600
  - Add strcpy to FFI::Platypus::Memory (gh#265)
  - Add window to FFI::Platypus::Buffer (gh#266, gh#267)

1.26      2020-05-07 04:59:17 -0600