@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Favor the Microsoft strdup over the bundled copy if found as _strdup
+    which is what it is called now.
 
 1.34      2020-10-23 09:04:46 -0600
   - Fixed bug in in record meta object which expressed itself on at least
